# RKS-BOT

./: README.md  config.json  keep_alive.py  main.py  pyproject.toml  readme.md  snipe.json
Cogs/: Embeds.py  Information.py  Quotes.py  chatbot.py  games.py  moderation.py  utility.py
