[tool.poetry]
name = "repl_python3_RKS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2020.11.17"
jishaku = "^1.20.0"
psutil = "^5.7.3"
utils = "^1.0.1"
bs4 = "^0.0.1"
config = "^0.5.0"
lxml = "^4.6.2"
qrcode = "^6.1"
xkcd = "^2.4.2"
replit = "^2.0.0"
wikipedia = "^1.4.0"
pyfiglet = "^0.8.post1"
lavalink = "^3.1.2"
async-cleverbot = "^0.2.2"
dblpy = "^0.4.0"
gg = "^0.0.20"
timeago = "^1.0.14"
wiki = "^0.7.1"
googletrans = "^3.0.0"
unidecode = "^1.1.2"
wand = "^0.6.5"
opencv-python = "^4.5.1"
praw = "^7.1.0"
ram-arith = "^1.0.2"
timedelta = "^2020.12.3"
armorvise = "^1.1.4"
aiosqlite = "^0.16.1"
tflearn = "^0.5.0"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
